--- a/package.json
+++ b/package.json
@@ -19,8 +19,5 @@
     "mongoose": "^6.0.12",
     "nodemon": "^2.0.14"
   },
-  "devDependencies": {
-    "eslint": "^8.1.0",
-    "eslint-plugin-react": "^7.26.1"
-  }
+  "devDependencies": {}
 }
